--- a/Telecum_Churn_Case_study.ipynb
+++ b/Telecum_Churn_Case_study.ipynb
@@ -6,7 +6,7 @@
       "name": "Telecum Churn Case study.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMr223y/8PA8MPVaXImLoGl",
+      "authorship_tag": "ABX9TyPhRB7FjJ1yWgngFcX515rY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "import warnings \n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
         "pd.set_option('Display.max_columns',300)\n",
         "pd.set_option('Display.max_rows',300)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
         "z = zipfile.ZipFile(io.BytesIO(r.content))\n",
         "z.extractall()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
       "source": [
         "df=pd.read_csv('telecom_churn_data.csv')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3587,13 +3587,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N-YsKAGzYLA8"
+        "id": "N-YsKAGzYLA8",
+        "outputId": "89a06b80-8a8b-452e-ac0a-70a8b11c8cdb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "print (\"catchgem\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "catchgem\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
