--- a/Telecum_Churn_Case_study.ipynb
+++ b/Telecum_Churn_Case_study.ipynb
@@ -40,7 +40,7 @@
         "import warnings \n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "pd.set_option('Display.max_columns',300)\n",
         "pd.set_option('Display.max_rows',300)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "z = zipfile.ZipFile(io.BytesIO(r.content))\n",
         "z.extractall()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "source": [
         "df=pd.read_csv('telecom_churn_data.csv')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3595,7 +3595,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3624,7 +3624,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6136,7 +6136,7 @@
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6381,7 +6381,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b0kmMV2ZVh-K"
+        "id": "b0kmMV2ZVh-K",
+        "outputId": "134be7b7-cef6-4341-9a2f-fc9623065d40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"catchgem \")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "catchgem \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xj2hZvcV7DaN"
       },
       "source": [
         ""
