--- a/Telecum_Churn_Case_study.ipynb
+++ b/Telecum_Churn_Case_study.ipynb
@@ -40,7 +40,7 @@
         "import warnings \n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "pd.set_option('Display.max_columns',300)\n",
         "pd.set_option('Display.max_rows',300)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "z = zipfile.ZipFile(io.BytesIO(r.content))\n",
         "z.extractall()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "source": [
         "df=pd.read_csv('telecom_churn_data.csv')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3595,7 +3595,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3624,7 +3624,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6136,7 +6136,7 @@
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6382,15 +6382,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "b0kmMV2ZVh-K",
-        "outputId": "6d01fc4f-7717-4912-d3ef-ab5a6485ccfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d01fc4f-7717-4912-d3ef-ab5a6485ccfa"
       },
       "source": [
         "2+2"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6409,7 +6409,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CNbGkrHe8Z5p"
+        "id": "CNbGkrHe8Z5p",
+        "outputId": "50d14605-94d1-4c51-be33-707953b4455f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "96588854+2568952"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "99157806"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "saIMi0TY8vV7"
       },
       "source": [
         ""
